fix z-index header (audio button )

--- a/css/main.css
+++ b/css/main.css
@@ -23,6 +23,7 @@ header {
     position: fixed;
     top: 0;
     width: 1200px;
+    z-index: 10000;
     
     
 
